fix(): update consumer
